kubernetes-app/k8s/common/ingress.yaml
# kubernetes-app/k8s/common/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastfood-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: fastfood.exemplo.com
    http:
      paths:
      - path: /pedidos
        pathType: Prefix
        backend:
          service:
            name: pedidos
            port:
              number: 80
      - path: /pagamentos
        pathType: Prefix
        backend:
          service:
            name: pagamentos
            port:
              number: 80
      - path: /monitor
        pathType: Prefix
        backend:
          service:
            name: monitor
            port:
              number: 80
